--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     
 </head>
 <body>
-    <div class="sticky-top" id="nav-import"></div>
+  <div class='sticky-top' id="nav-import" styles="height:100px; background-color:black"></div>
+
   
 
     <section class="hero-section py-5" style="background-color: #fdf8ef;">
