--- a/navbar.html
+++ b/navbar.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="#">O nas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Oferta</a>
+                <a class="nav-link" href="oferta.html">Oferta</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Oferta</a>
