--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
 </head>
-<body>
+<body class="fade-in">
   <div class='sticky-top' id="nav-import" styles="height:100px; background-color:black"></div>
 
   <!--HERO SECTION-->
@@ -38,7 +38,7 @@
                 <span>🎭 Przebrania</span>
               </div>
               <div class="conteiner d-flex justify-content-center mt-4">
-              <a href="#kontakt" class="btn btn-warning btn-lg" style="background-color: #DDC78C; border: none; color: #4A454A;">
+              <a href="kontakt.html" class="btn btn-warning btn-lg" style="background-color: #DDC78C; border: none; color: #4A454A;">
                 Skontaktuj się z nami
               </a>
             </div>
@@ -205,7 +205,7 @@
         <div class="container">
           <h2 class="mb-3">Planujesz wydarzenie?</h2>
           <p class="lead">Zorganizujemy je razem! Wypełnij krótki formularz kontaktowy.</p>
-          <a href="/kontakt" class="btn btn-warning btn-lg" style="background-color: #fdf8ef; border: none; color: #4A454A;">Skontaktuj się z nami</a>
+          <a href="kontakt.html" class="btn btn-warning btn-lg" style="background-color: #fdf8ef; border: none; color: #4A454A;">Skontaktuj się z nami</a>
         </div>
       </section>
 
@@ -229,7 +229,7 @@
 
 
 
-      <script src="/js/import.js"></script>
+      <script src="/js/import.js" defer></script>
   </body>
   </html>
 </html>
