--- a/navbar.html
+++ b/navbar.html
@@ -17,7 +17,7 @@
             <ul class="navbar-nav flex-column flex-lg-row align-items-center ms-lg-auto">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Strona główna</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Strona główna</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">O nas</a>
@@ -26,10 +26,10 @@
                 <a class="nav-link" href="oferta.html">Oferta</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Oferta</a>
+                <a class="nav-link" href="#">TEMPLATE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Kontakt</a>
+              <a class="nav-link" href="kontakt.html">Kontakt</a>
             </li>
           </ul>
         </div>
