--- a/oferta.html
+++ b/oferta.html
@@ -10,8 +10,9 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
+    
 </head>
-<body>
+<body class="fade-in">
   <div class='sticky-top' id="nav-import" styles="height:100px; background-color:black"></div>
 
   <!--HERO SECTION-->
@@ -39,7 +40,7 @@
                 <span>🎭 Przebrania</span>
               </div>
               <div class="conteiner d-flex justify-content-center mt-4">
-              <a href="#kontakt" class="btn btn-warning btn-lg" style="background-color: #DDC78C; border: none; color: #4A454A;">
+              <a href="kontakt.html" class="btn btn-warning btn-lg" style="background-color: #DDC78C; border: none; color: #4A454A;">
                 Skontaktuj się z nami
               </a>
             </div>
@@ -75,7 +76,7 @@
           <!-- dynamic content -->
         </div>
         <div class="container d-flex justify-content-center">
-        <a href="#kontakt" class="btn btn-warning btn-lg mt-4" style="background-color: #DDC78C; border: none; color: #4d3f4d;">
+        <a href="kontakt.html" class="btn btn-warning btn-lg mt-4" style="background-color: #DDC78C; border: none; color: #4d3f4d;">
             Startujemy z zabawą!
         </a>
     </div>
@@ -83,10 +84,10 @@
 
 
 
-
 <div id="footer-import"></div>
 
 
-<script src="js/mascots.js" defer></script>
+<script src="/js/mascots.js" defer></script>
+<script src="/js/import.js" defer></script>
 </body>
 </html>
