--- a/kontakt.html
+++ b/kontakt.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PartyStacja - Kontakt</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/main_style.css">
-    <link rel="stylesheet" href="/styles/contact.css">
+    <link rel="stylesheet" href="styles/main_style.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
@@ -183,6 +183,6 @@
 
 
   <div id="footer-import"></div>
-  <script src="/js/import.js"></script>
+  <script src="js/import.js"></script>
 </body>
 </html>
