--- a/oferta.html
+++ b/oferta.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PartyStacja - Oferta</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/main_style.css">
-    <link rel="stylesheet" href="/styles/offer.css">
+    <link rel="stylesheet" href="styles/main_style.css">
+    <link rel="stylesheet" href="styles/offer.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
@@ -87,7 +87,7 @@
 <div id="footer-import"></div>
 
 
-<script src="/js/mascots.js" defer></script>
-<script src="/js/import.js" defer></script>
+<script src="js/mascots.js" defer></script>
+<script src="js/import.js" defer></script>
 </body>
 </html>
