--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PartyStacja</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/main_style.css">
+    <link rel="stylesheet" href="styles/main_style.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
@@ -229,7 +229,7 @@
 
 
 
-      <script src="/js/import.js" defer></script>
+      <script src="js/import.js" defer></script>
   </body>
   </html>
 </html>
