--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body class="fade-in">
-  <div class='sticky-top' id="nav-import" styles="height:100px; background-color:black"></div>
+  <div class='sticky-top' id="nav-import"></div>
 
   <!--HERO SECTION-->
 
