--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Test</a>
         <button
