--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="#">Test</a>
         <button
           class="navbar-toggler"
