--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Test</a>
+        <a class="navbar-brand" href="/">
+          <img src="resources/icons/party_logo.png" alt="PartyStacja Logo" style="max-height: 60px;" />
+          PartyStacja
+        </a>
         <button
           class="navbar-toggler"
           type="button"
