--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/main_style.css" />
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
   </head>
   <body class="fade-in">
     <div class="sticky-top" id="nav-import"></div>
@@ -333,7 +334,7 @@
 
     <!--Footer-->
     <div id="footer-import"></div>
-
+    <script src="js/active_link.js" defer></script>
     <script src="js/import.js" defer></script>
   </body>
 </html>
