--- a/navbar.html
+++ b/navbar.html
@@ -20,19 +20,19 @@
             <ul class="navbar-nav flex-column flex-lg-row align-items-center ms-lg-auto">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Strona główna</a>
+              <a class="nav-link" id='index' href="index.html">Strona główna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">O nas</a>
+              <a class="nav-link" id="o_nas" href="o_nas.html">O nas</a>
+            </li>
+            <li class="nav-item" id="oferta-nav">
+                <a class="nav-link" id="oferta" href="oferta.html">Oferta</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="oferta.html">Oferta</a>
+                <a class="nav-link" id="galeria" href="galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">TEMPLATE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="kontakt.html">Kontakt</a>
+              <a class="nav-link" id="kontakt" href="kontakt.html">Kontakt</a>
             </li>
           </ul>
         </div>
