--- a/kontakt.html
+++ b/kontakt.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/contact.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/sweet.js"></script>
     
     
 </head>
