--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img
               src="resources/logo.png"
               alt="PartyStacja Logo"
-              style="max-width: 400px"
+              class="responsove-logo"
             />
           </div>
 
