--- a/o_nas.html
+++ b/o_nas.html
@@ -21,7 +21,7 @@
           <div class="row align-items-center">
             <!-- Lewa kolumna: logo -->
             <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
-              <img src="resources/logo.png" alt="PartyStacja Logo" style="max-width: 400px;" />
+              <img src="resources/logo.png" alt="PartyStacja Logo" class="responsove-logo" />
             </div>
       
             <!-- Prawa kolumna: tekst -->
