--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <div class="row align-items-center">
           <!-- Lewa kolumna: logo -->
           <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
-            <img
-              src="resources/logo.png"
-              alt="PartyStacja Logo"
-              class="responsove-logo"
-            />
+           <img
+  src="resources/logo.png"
+  alt="PartyStacja Logo"
+  class="img-fluid mx-auto d-block"
+  style="max-width: 400px"
+/>
           </div>
 
           <!-- Prawa kolumna: tekst -->
