hero image bugfix

--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,11 @@
       
             <!-- Prawa kolumna: tekst -->
             <div class="col-12 col-md-8 text-center text-md-start">
-              <h1 class="display-4 fw-bold text-center d-none d-md-block" style="color: #383438;">
+                         <img
+  src="resources/logo.png"
+  alt="PartyStacja Logo"
+  class="img-fluid mx-auto d-block"
+/>
                 Witamy w <span class="hero-span">PartyStacji</span>
               </h1>
               <p class="lead mb-4 text-center d-none d-md-block" style="color: #383438;">
