--- a/oferta.html
+++ b/oferta.html
@@ -22,7 +22,11 @@
           <div class="row align-items-center">
             <!-- Lewa kolumna: logo -->
             <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
-              <img src="resources/logo.png" alt="PartyStacja Logo" class="responsove-logo" />
+                         <img
+  src="resources/logo.png"
+  alt="PartyStacja Logo"
+  class="img-fluid mx-auto d-block"
+/>
             </div>
       
             <!-- Prawa kolumna: tekst -->
