--- a/galeria.html
+++ b/galeria.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PartyStacja - o nast</title>
+    <title>PartyStacja - o nas</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main_style.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/gallery.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
-    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+
+    <!--SEO META TAGS-->
+    <meta icon="favicon.ico">
+    <meta name="description" content="Chwytamy chwile! Zobacz, jak wyglądają nasze atrakcje w akcji – fotobudka 360, pluszowe maskotki i kolorowe dekoracje.">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
+    <meta name="author" content="PartyStacja">
+    <meta property="og:title" content="PartyStacja - Galeria">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="PartyStacja – Galeria">
+    <meta property="og:description" content="Chwytamy chwile! Zobacz, jak wyglądają nasze atrakcje w akcji – fotobudka 360, pluszowe maskotki i kolorowe dekoracje.">
+    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.partystacja.pl/galeria.html">
+    <meta property="og:type" content="website">
+
 </head>
 <body class="fade-in">
 <div class='sticky-top' id="nav-import"></div>
