--- a/kontakt.html
+++ b/kontakt.html
@@ -11,6 +11,21 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/sweet.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+        <!--SEO META TAGS-->
+    <meta icon="favicon.ico">
+    <meta name="description" content="Skontaktuj się z nami, aby zarezerwować atrakcje na swoją imprezę. Jesteśmy dostępni telefonicznie, mailowo i przez formularz.">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
+    <meta name="author" content="PartyStacja">
+    <meta property="og:title" content="PartyStacja - Kontakt">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="PartyStacja – o nas">
+    <meta property="og:description" content="Skontaktuj się z nami, aby zarezerwować atrakcje na swoją imprezę. Jesteśmy dostępni telefonicznie, mailowo i przez formularz.">
+    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.partystacja.pl/kontakt.html">
+    <meta property="og:type" content="website">
     
     
 </head>
