--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="styles/main_style.css" />
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+        <!--SEO META TAGS-->
+    <meta icon="favicon.ico">
+    <meta name="description" content="PartyStacja - Twoja stacja wyjątkowych chwil. Oferujemy fotobudki, dekoracje, maskotki i przebrania na każdą okazję. Skontaktuj się z nami, aby stworzyć niezapomniane wspomnienia!">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
+    <meta name="author" content="PartyStacja">
+    <meta property="og:title" content="PartyStacja - Twoja stacja wyjątkowych chwil">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="PartyStacja – Atrakcje na Twoją Imprezę">
+    <meta property="og:description" content="Wypożycz fotobudkę 360, zamów maskotki i udekoruj swoją imprezę z PartyStacją!">
+    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.partystacja.pl">
+    <meta property="og:type" content="website">
     
   </head>
   <body class="fade-in">
