--- a/o_nas.html
+++ b/o_nas.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="styles/contact.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!--SEO META TAGS-->
+    <meta icon="favicon.ico">
+    <meta name="description" content="PartyStacja to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej..">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
+    <meta name="author" content="PartyStacja">
+    <meta property="og:title" content="PartyStacja - o nas">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="PartyStacja – o nas">
+    <meta property="og:description" content="PartyStacja to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej.,">
+    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.partystacja.pl/o_nas.html">
+    <meta property="og:type" content="website">
     
     
 </head>
