--- a/oferta.html
+++ b/oferta.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="styles/offer.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+
+            <!--SEO META TAGS-->
+    <meta icon="favicon.ico">
+    <meta name="description" content="Sprawdź ofertę PartyStacji: fotobudka 360, maskotki, dekoracje i inne atrakcje, które rozkręcą każdą imprezę.">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
+    <meta name="author" content="PartyStacja">
+    <meta property="og:title" content="PartyStacja - Galeria">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="PartyStacja – Oferta">
+    <meta property="og:description" content="Sprawdź ofertę PartyStacji: fotobudka 360, maskotki, dekoracje i inne atrakcje, które rozkręcą każdą imprezę.">
+    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.partystacja.pl/oferta.html">
+    <meta property="og:type" content="website">
     
     
 </head>
