--- a/galeria.html
+++ b/galeria.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="styles/main_style.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/gallery.css">
+    <link rel="stylesheet" href="styles/effects.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://unpkg.com/@barba/core"></script>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 
@@ -26,49 +28,69 @@
     <meta property="og:type" content="website">
 
 </head>
-<body class="fade-in">
-<div class='sticky-top' id="nav-import"></div>
- <!--HERO SECTION-->
+<body>
+    <!-- Loader widoczny podczas przejść -->
+    <div id="page-loader" style="display: none;">
+        <div>Ładowanie...</div>
+    </div>
+  <div data-barba="wrapper">
+    <div class='sticky-top' id="nav-import"></div>
+    
+    <main data-barba="container" data-barba-namespace="gallery">
+      <!--HERO SECTION-->
 
     <section class="hero-section py-5">
-        <div class="container">
-          <div class="row align-items-center">
-            <!-- Lewa kolumna: logo -->
-            <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
-                        <img
-  src="resources/logo.png"
+      <div class="container">
+        <div class="row align-items-center">
+          <!-- Lewa kolumna: logo -->
+          <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
+           <img
+  src="resources/logo.jpg"
   alt="PartyStacja Logo"
   class="img-fluid mx-auto d-block"
 />
+          </div>
+
+          <!-- Prawa kolumna: tekst -->
+          <div class="col-12 col-md-8 text-center text-md-start">
+            <h1
+              class="display-4 fw-bold text-center d-none d-md-block"
+              style="color: #f5ed96"
+            >
+              Witamy w <span class="hero-span">PartyTime</span>
+            </h1>
+            <p
+              class="lead mb-4 text-center d-none d-md-block"
+              style="color: #f5ed96"
+            >
+              Twoja stacja wyjątkowych chwil
+            </p>
+            <div
+              class="d-flex flex-wrap justify-content-center"
+              style="color: #f5ed96; font-size: 1.2rem; gap: 0.8rem"
+            >
+              <span>📸 Fotobudki</span>
+              <span>🎈 Dekoracje</span>
+              <span>🐻 Maskotki</span>
+              <span>🎭 Przebrania</span>
             </div>
-      
-            <!-- Prawa kolumna: tekst -->
-            <div class="col-12 col-md-8 text-center text-md-start">
-              <h1 class="display-4 fw-bold text-center d-none d-md-block" style="color: #383438;">
-                Witamy w <span class="hero-span">PartyStacji</span>
-              </h1>
-              <p class="lead mb-4 text-center d-none d-md-block" style="color: #383438;">
-                Twoja stacja wyjątkowych chwil
-              </p>
-              <div class="d-flex flex-wrap justify-content-center" style="color: #383438; font-size: 1.2rem; gap: 0.8rem;">
-                <span>📸 Fotobudki</span>
-                <span>🎈 Dekoracje</span>
-                <span>🐻 Maskotki</span>
-                <span>🎭 Przebrania</span>
-              </div>
-              <div class="conteiner d-flex justify-content-center mt-4">
-              <a href="kontakt.html" class="btn btn-warning btn-lg" style="background-color: #DDC78C; border: none; color: #4A454A;">
+            <div class="conteiner d-flex justify-content-center mt-4">
+              <a
+                href="kontakt.html"
+                class="btn btn-warning btn-lg"
+                style="background-color: #CFB53B; border: none; color: #000000"
+              >
                 Skontaktuj się z nami
               </a>
             </div>
-            </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 <!--WAVE-->
       <section class="wave-section">
         <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg" style="display: block;">
-            <path fill="#CFB472" d="M0,50 C360,150 1080,-50 1440,50 L1440,100 L0,100 Z"></path>
+            <path fill="#1a1a1a" d="M0,50 C360,150 1080,-50 1440,50 L1440,100 L0,100 Z"></path>
         </svg>
       </section>
 
@@ -78,29 +100,49 @@
     <div class="carousel-inner">
       <!-- Slajd 1 -->
       <div class="carousel-item active">
-        <div class="row g-3 justify-content-center">
-          <div class="col-4">
-            <img src="https://picsum.photos/id/1015/400/400" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 1" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="https://picsum.photos/id/1015/800/800">
-          </div>
-          <div class="col-4">
-            <img src="https://picsum.photos/id/1025/400/400" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 2" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="https://picsum.photos/id/1025/800/800">
-          </div>
-          <div class="col-4">
-            <img src="https://picsum.photos/id/1035/400/400" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 3" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="https://picsum.photos/id/1035/800/800">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-8">
+            <img src="resources/photos/real/12.JPG" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 1" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="resources/photos/real/12.JPG">
           </div>
         </div>
       </div>
       <!-- Slajd 2 -->
       <div class="carousel-item">
-        <div class="row g-3 justify-content-center">
-          <div class="col-4">
-            <img src="https://picsum.photos/id/1045/400/400" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 4" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="https://picsum.photos/id/1045/800/800">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-8">
+            <img src="resources/photos/real/18.JPG" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 2" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="resources/photos/real/18.JPG">
           </div>
-          <div class="col-4">
-            <img src="https://picsum.photos/id/1055/400/400" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 5" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="https://picsum.photos/id/1055/800/800">
+        </div>
+      </div>
+      <!-- Slajd 3 -->
+      <div class="carousel-item">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-8">
+            <img src="resources/photos/real/22.JPG" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 3" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="resources/photos/real/22.JPG">
           </div>
-          <div class="col-4">
-            <img src="https://picsum.photos/id/1065/400/400" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 6" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="https://picsum.photos/id/1065/800/800">
+        </div>
+      </div>
+      <!-- Slajd 4 -->
+      <div class="carousel-item">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-8">
+            <img src="resources/photos/real/25.JPG" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 4" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="resources/photos/real/25.JPG">
+          </div>
+        </div>
+      </div>
+      <!-- Slajd 5 -->
+      <div class="carousel-item">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-8">
+            <img src="resources/photos/real/28.JPG" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 5" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="resources/photos/real/28.JPG">
+          </div>
+        </div>
+      </div>
+      <!-- Slajd 6 -->
+      <div class="carousel-item">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-8">
+            <img src="resources/photos/real/6.JPG" class="d-block w-100 rounded shadow-sm img-clickable" alt="Zdjęcie 6" data-bs-toggle="modal" data-bs-target="#imageModal" data-img="resources/photos/real/6.JPG">
           </div>
         </div>
       </div>
@@ -137,10 +179,14 @@
 
 
 
+    </main>
 
-<div id=footer-import></div>
+    <div id=footer-import></div>
+  </div>
+  
 <script src="js/import.js" defer></script>
 <script src="js/active_link.js" defer></script>
+<script src="js/barba-setup.js" defer></script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     const modal = document.getElementById('imageModal');
