--- a/navbar.html
+++ b/navbar.html
@@ -1,9 +1,9 @@
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="/">
-          <img src="resources/icons/party_logo.png" alt="PartyStacja Logo" style="max-height: 60px;" />
-          PartyStacja
+        <a class="navbar-brand" href="index.html">
+          <img src="resources/icons/party_logo.png" alt="PartyTime Logo" style="max-height: 60px;" />
+          PartyTime
         </a>
         <button
           class="navbar-toggler"
