--- a/galeria.html
+++ b/galeria.html
@@ -12,6 +12,7 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 
@@ -63,16 +64,16 @@
               class="lead mb-4 text-center d-none d-md-block"
               style="color: #f5ed96"
             >
-              Twoja stacja wyjątkowych chwil
+              Wyjątkowe chwile zasługują na wyjątkową oprawę
             </p>
             <div
               class="d-flex flex-wrap justify-content-center"
               style="color: #f5ed96; font-size: 1.2rem; gap: 0.8rem"
             >
-              <span>📸 Fotobudki</span>
-              <span>🎈 Dekoracje</span>
-              <span>🐻 Maskotki</span>
-              <span>🎭 Przebrania</span>
+              <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
+              <span><i class="fas fa-palette"></i> Dekoracje</span>
+              <span><i class="fas fa-paw"></i> Maskotki</span>
+              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
@@ -95,7 +96,7 @@
       </section>
 
 <section class="container my-5">
-    <h2 class="text-center fw-bold mb-4">📸 Galeria</h2>
+    <h2 class="text-center fw-bold mb-4"><i class="fas fa-images" style="color: #CFB53B;"></i> Galeria</h2>
   <div id="partyCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <!-- Slajd 1 -->
