--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <!--SEO META TAGS-->
@@ -61,16 +62,16 @@
               class="lead mb-4 text-center d-none d-md-block"
               style="color: #f5ed96"
             >
-              Twoja stacja wyjątkowych chwil
+              Wyjątkowe chwile zasługują na wyjątkową oprawę
             </p>
             <div
               class="d-flex flex-wrap justify-content-center"
               style="color: #f5ed96; font-size: 1.2rem; gap: 0.8rem"
             >
-              <span>📸 Fotobudki</span>
-              <span>🎈 Dekoracje</span>
-              <span>🐻 Maskotki</span>
-              <span>🎭 Przebrania</span>
+              <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
+              <span><i class="fas fa-palette"></i> Dekoracje</span>
+              <span><i class="fas fa-paw"></i> Maskotki</span>
+              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
@@ -163,7 +164,7 @@
           <!-- Photo -->
           <div class="col-md-6 order-2 order-md-1">
             <img
-              src="/resources/photos/real/23.JPG"
+              src="resources/photos/real/23.JPG"
               alt="Rodzina i dzieci podczas zabawy"
               class="img-fluid rounded shadow-sm"
             />
@@ -239,7 +240,7 @@
         <div class="row g-4">
           <div class="col-md-6">
             <div class="glass-card p-4 h-100 text-center wow fadeInLeft">
-              <div class="icon mb-3">✅</div>
+              <div class="icon mb-3"><i class="fas fa-check-circle" style="color: #CFB53B; font-size: 2rem;"></i></div>
               <h3 class="fw-bold mb-3">Profesjonalna obsługa</h3>
               <p class="lead">
                 U nas liczą się emocje, wspomnienia i uśmiech. Organizujemy nie
@@ -253,10 +254,10 @@
           </div>
           <div class="col-md-6">
             <div class="glass-card p-4 h-100 text-center wow fadeInRight">
-              <div class="icon mb-3">🚚</div>
+              <div class="icon mb-3"><i class="fas fa-truck" style="color: #CFB53B; font-size: 2rem;"></i></div>
               <h3 class="fw-bold mb-3">Dojeżdżamy w Trójmieście</h3>
               <p class="lead">
-                👨‍👩‍👧 Urodziny, chrzciny, komunie, 18-tki, panieńskie, wesela, baby
+                <i class="fas fa-users" style="color: #CFB53B;"></i> Urodziny, chrzciny, komunie, 18-tki, panieńskie, wesela, baby
                 shower, dzień dziecka, festyny, bale, rozpoczęcie i zakończenie
                 roku, mikołajki, eventy firmowe, imprezy przedszkolne i szkolne…
                 i wiele, wiele więcej!<br /><br />
