--- a/kontakt.html
+++ b/kontakt.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/sweet.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <!--SEO META TAGS-->
@@ -66,16 +67,16 @@
               class="lead mb-4 text-center d-none d-md-block"
               style="color: #f5ed96"
             >
-              Twoja stacja wyjątkowych chwil
+              Wyjątkowe chwile zasługują na wyjątkową oprawę
             </p>
             <div
               class="d-flex flex-wrap justify-content-center"
               style="color: #f5ed96; font-size: 1.2rem; gap: 0.8rem"
             >
-              <span>📸 Fotobudki</span>
-              <span>🎈 Dekoracje</span>
-              <span>🐻 Maskotki</span>
-              <span>🎭 Przebrania</span>
+              <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
+              <span><i class="fas fa-palette"></i> Dekoracje</span>
+              <span><i class="fas fa-paw"></i> Maskotki</span>
+              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
