--- a/o_nas.html
+++ b/o_nas.html
@@ -12,6 +12,7 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!--SEO META TAGS-->
@@ -63,16 +64,16 @@
               class="lead mb-4 text-center d-none d-md-block"
               style="color: #f5ed96"
             >
-              Twoja stacja wyjątkowych chwil
+              Wyjątkowe chwile zasługują na wyjątkową oprawę
             </p>
             <div
               class="d-flex flex-wrap justify-content-center"
               style="color: #f5ed96; font-size: 1.2rem; gap: 0.8rem"
             >
-              <span>📸 Fotobudki</span>
-              <span>🎈 Dekoracje</span>
-              <span>🐻 Maskotki</span>
-              <span>🎭 Przebrania</span>
+              <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
+              <span><i class="fas fa-palette"></i> Dekoracje</span>
+              <span><i class="fas fa-paw"></i> Maskotki</span>
+              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
@@ -98,7 +99,7 @@
       <section class="container my-5 d-flex justify-content-center about-section">
       
  <div class="text-center col-lg-8 col-md-10">
-      <h2 class="mb-4 fw-bold text-center">😊 O nas</h2>
+      <h2 class="mb-4 fw-bold text-center"><i class="fas fa-heart" style="color: #CFB53B;"></i> O nas</h2>
       <p class="lead text-center mb-5">
         <strong>PartyTime powstało z miłości do uśmiechu, radości i wyjątkowych chwil.</strong><br>
         Wierzymy, że każda impreza – mała czy duża – zasługuje na odrobinę magii. Dlatego od samego początku naszym celem było jedno: tworzyć wydarzenia, które zostają w sercu na długo po tym, jak opadnie konfetti.
