--- a/oferta.html
+++ b/oferta.html
@@ -11,6 +11,7 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 
@@ -64,16 +65,16 @@
               class="lead mb-4 text-center d-none d-md-block"
               style="color: #f5ed96"
             >
-              Twoja stacja wyjątkowych chwil
+              Wyjątkowe chwile zasługują na wyjątkową oprawę
             </p>
             <div
               class="d-flex flex-wrap justify-content-center"
               style="color: #f5ed96; font-size: 1.2rem; gap: 0.8rem"
             >
-              <span>📸 Fotobudki</span>
-              <span>🎈 Dekoracje</span>
-              <span>🐻 Maskotki</span>
-              <span>🎭 Przebrania</span>
+              <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
+              <span><i class="fas fa-palette"></i> Dekoracje</span>
+              <span><i class="fas fa-paw"></i> Maskotki</span>
+              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
@@ -96,18 +97,18 @@
       </section>
 
       <section class="container my-5">
-        <h2 class="text-center fw-bold mb-4">✨ Nasze atrakcje</h2>
+        <h2 class="text-center fw-bold mb-4"><i class="fas fa-star" style="color: #CFB53B;"></i> Nasze atrakcje</h2>
         <div class="d-flex justify-content-center flex-wrap gap-3 my-4" id="oferta-selector">
             <div class="oferta-tile" data-show="fotobudka">
-              <div class="emoji">📸</div>
+              <div class="emoji"><i class="fas fa-camera-retro"></i></div>
               <div class="label">Fotobudka 360</div>
             </div>
             <div class="oferta-tile" data-show="maskotki">
-              <div class="emoji">🧸</div>
+              <div class="emoji"><i class="fas fa-paw"></i></div>
               <div class="label">Maskotki</div>
             </div>
             <div class="oferta-tile" data-show="dekoracje">
-              <div class="emoji">🎈</div>
+              <div class="emoji"><i class="fas fa-palette"></i></div>
               <div class="label">Dekoracje</div>
             </div>
           </div>
