--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PartyStacja - o nas</title>
+    <title>PartyTime - Galeria</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main_style.css">
     <link rel="stylesheet" href="styles/contact.css">
@@ -18,9 +18,9 @@
 
     <!--SEO META TAGS-->
     <meta name="description" content="Chwytamy chwile! Zobacz, jak wyglądają nasze atrakcje w akcji – fotobudka 360, pluszowe maskotki i kolorowe dekoracje.">
-    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
-    <meta name="author" content="PartyStacja">
-    <meta property="og:title" content="PartyStacja - Galeria">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyTime, galeria, kontakt">
+    <meta name="author" content="PartyTime">
+    <meta property="og:title" content="PartyTime - Galeria">
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="Chwytamy chwile! Zobacz, jak wyglądają nasze atrakcje w akcji – fotobudka 360, pluszowe maskotki i kolorowe dekoracje.">
@@ -47,7 +47,7 @@
           <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
            <img
   src="resources/logo.jpg"
-  alt="PartyStacja Logo"
+  alt="PartyTime Logo"
   class="img-fluid mx-auto d-block"
 />
           </div>
