--- a/kontakt.html
+++ b/kontakt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PartyStacja - Kontakt</title>
+    <title>PartyTime - Kontakt</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main_style.css">
     <link rel="stylesheet" href="styles/contact.css">
@@ -19,12 +19,12 @@
         <!--SEO META TAGS-->
     <meta icon="favicon.ico">
     <meta name="description" content="Skontaktuj się z nami, aby zarezerwować atrakcje na swoją imprezę. Jesteśmy dostępni telefonicznie, mailowo i przez formularz.">
-    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
-    <meta name="author" content="PartyStacja">
-    <meta property="og:title" content="PartyStacja - Kontakt">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyTime, galeria, kontakt">
+    <meta name="author" content="PartyTime">
+    <meta property="og:title" content="PartyTime - Kontakt">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:title" content="PartyStacja – o nas">
+    <meta property="og:title" content="PartyTime – o nas">
     <meta property="og:description" content="Skontaktuj się z nami, aby zarezerwować atrakcje na swoją imprezę. Jesteśmy dostępni telefonicznie, mailowo i przez formularz.">
     <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
     <meta property="og:url" content="https://www.partystacja.pl/kontakt.html">
@@ -50,7 +50,7 @@
           <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
            <img
   src="resources/logo.jpg"
-  alt="PartyStacja Logo"
+  alt="PartyTime Logo"
   class="img-fluid mx-auto d-block"
 />
           </div>
