--- a/footer.html
+++ b/footer.html
@@ -3,5 +3,5 @@
     <footer class="footer py-4">
         <hr>
         <div class="container text-center">
-            <p class="mb-0">© 2025 PartyStacja. Wszelkie prawa zastrzeżone.</p>
+            <p class="mb-0">© 2025 PartyTime. Wszelkie prawa zastrzeżone.</p>
             <p class="mb-0">Strona stworzona przez VS</p>
