--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PartyStacja</title>
+    <title>PartyTime</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/main_style.css" />
     <link rel="stylesheet" href="styles/effects.css" />
@@ -14,10 +14,10 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <!--SEO META TAGS-->
-    <meta name="description" content="PartyStacja - Twoja stacja wyjątkowych chwil. Oferujemy fotobudki, dekoracje, maskotki i przebrania na każdą okazję. Skontaktuj się z nami, aby stworzyć niezapomniane wspomnienia!">
-    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
-    <meta name="author" content="PartyStacja">
-    <meta property="og:title" content="PartyStacja - Twoja stacja wyjątkowych chwil">
+    <meta name="description" content="PartyTime - Wyjątkowe chwile zasługują na wyjątkową oprawę. Oferujemy fotobudki, dekoracje, maskotki i przebrania na każdą okazję. Skontaktuj się z nami, aby stworzyć niezapomniane wspomnienia!">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyTime, galeria, kontakt">
+    <meta name="author" content="PartyTime">
+    <meta property="og:title" content="PartyTime - Wyjątkowe chwile zasługują na wyjątkową oprawę">
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="Wypożycz fotobudkę 360, zamów maskotki i udekoruj swoją imprezę z PartyStacją!">
@@ -45,7 +45,7 @@
           <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
            <img
   src="resources/logo.jpg"
-  alt="PartyStacja Logo"
+  alt="PartyTime Logo"
   class="img-fluid mx-auto d-block"
 />
           </div>
@@ -107,7 +107,7 @@
         <!-- Para -->
         <div class="col-md-6 mb-4 mb-md-0">
           <h2 class="fw-bold mb-3 text-center">
-            PartyStacja powstała z miłości do uśmiechu i radości.
+            PartyTime powstało z miłości do uśmiechu i radości.
           </h2>
           <p class="lead text-center">
             To właśnie te emocje są dla nas najważniejsze — bo nic tak nie łączy
@@ -298,14 +298,14 @@
     <div class="col-md-6 mb-4 mb-md-0">
       <section class="text-center py-5">
         <div class="container">
-          <h2 class="mb-3">Planujesz wydarzenie?</h2>
+          <h2 class="mb-3" style="color: #CFB53B;">Planujesz wydarzenie?</h2>
           <p class="lead">
             Zorganizujemy je razem! Wypełnij krótki formularz kontaktowy.
           </p>
           <a
             href="kontakt.html"
             class="btn btn-warning btn-lg"
-            style="background-color: #fdf8ef; border: none; color: #4a454a"
+            style="background-color: #CFB53B; border: none; color: #000000"
           >
             Skontaktuj się z nami
           </a>
