--- a/oferta.html
+++ b/oferta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PartyStacja - Oferta</title>
+    <title>PartyTime - Oferta</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main_style.css">
     <link rel="stylesheet" href="styles/offer.css">
@@ -18,9 +18,9 @@
             <!--SEO META TAGS-->
 
     <meta name="description" content="Sprawdź ofertę PartyStacji: fotobudka 360, maskotki, dekoracje i inne atrakcje, które rozkręcą każdą imprezę.">
-    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
-    <meta name="author" content="PartyStacja">
-    <meta property="og:title" content="PartyStacja - Galeria">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyTime, galeria, kontakt">
+    <meta name="author" content="PartyTime">
+    <meta property="og:title" content="PartyTime - Galeria">
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="Sprawdź ofertę PartyStacji: fotobudka 360, maskotki, dekoracje i inne atrakcje, które rozkręcą każdą imprezę.">
@@ -48,7 +48,7 @@
           <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
            <img
   src="resources/logo.jpg"
-  alt="PartyStacja Logo"
+  alt="PartyTime Logo"
   class="img-fluid mx-auto d-block"
 />
           </div>
