--- a/polityka.html
+++ b/polityka.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PartyStacja - o nas</title>
+    <title>PartyTime - polityka prywatności</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main_style.css">
     <link rel="stylesheet" href="styles/contact.css">
@@ -17,13 +17,13 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!--SEO META TAGS-->
-    <meta name="description" content="PartyStacja to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej..">
-    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyStacja, galeria, kontakt">
-    <meta name="author" content="PartyStacja">
-    <meta property="og:title" content="PartyStacja - o nas">
+    <meta name="description" content="PartyTime to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej..">
+    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyTime, galeria, kontakt">
+    <meta name="author" content="PartyTime">
+    <meta property="og:title" content="PartyTime - polityka prywatności">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:description" content="PartyStacja to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej.,">
+    <meta property="og:description" content="PartyTime to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej.,">
     <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
     <meta property="og:url" content="https://www.partystacja.pl/o_nas.html">
     <meta property="og:type" content="website">
@@ -48,7 +48,7 @@
           <div class="col-12 col-md-4 text-center text-md-start mb-4 mb-md-0">
            <img
   src="resources/logo.jpg"
-  alt="PartyStacja Logo"
+  alt="PartyTime Logo"
   class="img-fluid mx-auto d-block"
 />
           </div>
