--- a/navbar.html
+++ b/navbar.html
@@ -1,10 +1,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="resources/icons/party_logo.png" alt="PartyTime Logo" style="max-height: 60px;" />
-          PartyTime
-        </a>
+<a class="navbar-brand" href="index.html">
+  <img src="resources/icons/party_logo.png" alt="PartyTime Logo" style="max-height: 55px;" />
+  <span style="font-size: 18px;">PartyTime</span>
+</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,6 +33,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" id="kontakt" href="kontakt.html">Kontakt</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="sklep" href="sklep.html">Sklep</a>
             </li>
           </ul>
         </div>
