cookie banner, favicon

--- a/footer.html
+++ b/footer.html
@@ -5,3 +5,7 @@
         <div class="container text-center">
             <p class="mb-0">© 2025 PartyTime. Wszelkie prawa zastrzeżone.</p>
             <p class="mb-0">Strona stworzona przez VS</p>
+            <p class="mb-0">
+                <a href="polityka.html" class="footer-link">Polityka prywatności</a> | 
+                <a href="#" id="cookies-settings-link" class="footer-link" onclick="if(typeof window.showCookiesSettings === 'function') { window.showCookiesSettings(); } else { console.log('showCookiesSettings nie dostępne'); } return false;">Ustawienia cookies</a>
+            </p>
