--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/@barba/core"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
+fav
 
     <!--SEO META TAGS-->
     <meta name="description" content="Chwytamy chwile! Zobacz, jak wyglądają nasze atrakcje w akcji – fotobudka 360, pluszowe maskotki i kolorowe dekoracje.">
@@ -24,8 +24,8 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="Chwytamy chwile! Zobacz, jak wyglądają nasze atrakcje w akcji – fotobudka 360, pluszowe maskotki i kolorowe dekoracje.">
-    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
-    <meta property="og:url" content="https://www.partystacja.pl/galeria.html">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.e-partytime.pl/galeria.html">
     <meta property="og:type" content="website">
 
 </head>
