--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="Wypożycz fotobudkę 360, zamów maskotki i udekoruj swoją imprezę z PartyStacją!">
-    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.jpg">
-    <meta property="og:url" content="https://www.partystacja.pl">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.jpg">
+    <meta property="og:url" content="https://www.e-partytime.pl">
     <meta property="og:type" content="website">
     
   </head>
@@ -318,7 +318,7 @@
       <h2 class="fw-bold mb-3 text-center">Jesteśmy tutaj!</h2>
       <div class="ratio ratio-4x3">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1644.9272562028195!2d18.598875927245206!3d54.33439010104082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1750261311439!5m2!1spl!2spl"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1083.4759794745598!2d18.581117774214498!3d54.332279308010165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd74110eff0947%3A0xfecadf76f9cce489!2sWarszawska%20151%2C%2080-180%20Gda%C5%84sk!5e0!3m2!1spl!2spl!4v1758972336402!5m2!1spl!2spl"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
