--- a/kontakt.html
+++ b/kontakt.html
@@ -26,8 +26,8 @@
 
     <meta property="og:title" content="PartyTime – o nas">
     <meta property="og:description" content="Skontaktuj się z nami, aby zarezerwować atrakcje na swoją imprezę. Jesteśmy dostępni telefonicznie, mailowo i przez formularz.">
-    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
-    <meta property="og:url" content="https://www.partystacja.pl/kontakt.html">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.e-partytime.pl/kontakt.html">
     <meta property="og:type" content="website">
     
     
