--- a/o_nas.html
+++ b/o_nas.html
@@ -23,8 +23,8 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="PartyTime to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej.,">
-    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
-    <meta property="og:url" content="https://www.partystacja.pl/o_nas.html">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.e-partytime.pl/o_nas.html">
     <meta property="og:type" content="website">
     
 </head>
@@ -111,7 +111,7 @@
         Dla nas każde wydarzenie to <strong>niepowtarzalna podróż</strong>. A my jesteśmy tą stacją, na której emocje łączą się z kolorami, a radość z detalem. Nie działamy według szablonów – zamiast tego uważnie słuchamy i tworzymy coś dopasowanego <strong>dokładnie do Ciebie i Twoich bliskich</strong>.
       </p>
       <p class="lead mb-4 fw-bold fst-italic">
-        W PartyStacji nie tylko organizujemy atrakcje.<br>
+        W PartyTime nie tylko organizujemy atrakcje.<br>
         <strong class='fw-bold'>Tworzymy atmosferę. Oprawiamy wspomnienia. I zawsze stawiamy na uśmiech.</strong>
       </p>
     </div>
