--- a/oferta.html
+++ b/oferta.html
@@ -24,8 +24,8 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="Sprawdź ofertę PartyStacji: fotobudka 360, maskotki, dekoracje i inne atrakcje, które rozkręcą każdą imprezę.">
-    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
-    <meta property="og:url" content="https://www.partystacja.pl/oferta.html">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.e-partytime.pl/oferta.html">
     <meta property="og:type" content="website">
     
     
