--- a/polityka.html
+++ b/polityka.html
@@ -24,8 +24,8 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:description" content="PartyTime to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej.,">
-    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
-    <meta property="og:url" content="https://www.partystacja.pl/o_nas.html">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.e-partytime.pl/o_nas.html">
     <meta property="og:type" content="website">
     
 </head>
@@ -107,8 +107,8 @@
 <section id="administrator" class="mb-3">
 <h2 class="h5">1. Administrator danych</h2>
 <p>
-Administratorem danych osobowych jest <strong>[Twoja firma/nazwa]</strong> z siedzibą w <strong>[adres, kod pocztowy, miasto]</strong>.
-Kontakt: <a href="mailto:[Twój e-mail]">[Twój e-mail]</a> | tel. <strong>[numer]</strong>.
+Administratorem danych osobowych jest <strong>[Twoja firma/nazwa]</strong> z siedzibą w <strong>Gdańsku, ul. Warszawska 121, 80-180</strong>.
+Kontakt: <a href="mailto:[Twój e-mail]">ms.katy@wp.pl</a> | tel. <strong>[numer]</strong>.
 </p>
 </section>
 
