--- a/sklep.html
+++ b/sklep.html
@@ -14,15 +14,15 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!--SEO META TAGS-->
-    <meta name="description" content="Sklep PartyStacja - wkrótce otwarcie! Sprawdź nasze nadchodzące produkty i bądź pierwszy który skorzysta z naszej oferty.">
+    <meta name="description" content="Sklep PartyTime - wkrótce otwarcie! Sprawdź nasze nadchodzące produkty i bądź pierwszy który skorzysta z naszej oferty.">
     <meta name="keywords" content="sklep, fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyTime">
     <meta name="author" content="PartyTime">
     <meta property="og:title" content="PartyTime - Sklep">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:description" content="Sklep PartyStacja - wkrótce otwarcie! Sprawdź nasze nadchodzące produkty i bądź pierwszy który skorzysta z naszej oferty.">
-    <meta property="og:image" content="https://www.partystacja.pl/resources/logo.png">
-    <meta property="og:url" content="https://www.partystacja.pl/sklep.html">
+    <meta property="og:description" content="Sklep PartyTime - wkrótce otwarcie! Sprawdź nasze nadchodzące produkty i bądź pierwszy który skorzysta z naszej oferty.">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
+    <meta property="og:url" content="https://www.e-partytime.pl/sklep.html">
     <meta property="og:type" content="website">
 
     <style>
