--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
       <div class="container">
 <a class="navbar-brand" href="index.html">
-  <img src="resources/icons/party_logo.png" alt="PartyTime Logo" style="max-height: 55px;" />
+  <img src="resources/logo2.png" alt="PartyTime Logo" style="max-height: 55px;" />
   <span style="font-size: 18px;">PartyTime</span>
 </a>
         <button
