--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PartyTime</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />              
     <link rel="stylesheet" href="styles/main_style.css" />
     <link rel="stylesheet" href="styles/effects.css" />
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -107,13 +107,13 @@
         <!-- Para -->
         <div class="col-md-6 mb-4 mb-md-0">
           <h2 class="fw-bold mb-3 text-center">
-            PartyTime powstało z miłości do uśmiechu i radości.
+            PartyTime powstało z miłości do <span class="gold-highlight">uśmiechu</span> i <span class="gold-highlight">radości</span>.
           </h2>
           <p class="lead text-center">
-            To właśnie te emocje są dla nas najważniejsze — bo nic tak nie łączy
-            ludzi, jak wspólne chwile szczęścia. Wierzymy, że każda impreza,
+            To właśnie te <span class="gold-highlight">emocje</span> są dla nas najważniejsze — bo nic tak nie łączy
+            ludzi, jak wspólne chwile <span class="gold-highlight">szczęścia</span>. Wierzymy, że każda <span class="gold-highlight">impreza</span>,
             każde spotkanie i każda uroczystość to nie tylko wydarzenie, ale
-            przede wszystkim okazja do budowania pięknych, trwałych wspomnień.
+            przede wszystkim okazja do budowania pięknych, <span class="gold-highlight">trwałych wspomnień</span>.
           </p>
         </div>
 
@@ -150,14 +150,14 @@
           <!-- Para -->
           <div class="col-md-6 mb-4 mb-md-0 order-1 order-md-2">
             <h2 class="fw-bold mb-3 text-center">
-              Pomagamy rodzinom, parom i dzieciom tworzyć niezapomniane chwile.
+              Pomagamy <span class="gold-highlight">rodzinom</span>, <span class="gold-highlight">parom</span> i <span class="gold-highlight">dzieciom</span> tworzyć niezapomniane chwile.
             </h2>
             <p class="lead text-center">
-              Niezależnie od tego, czy planujesz kameralne spotkanie w gronie
-              najbliższych, czy wielką imprezę pełną śmiechu i zabawy — jesteśmy
-              tu, by uczynić ten czas wyjątkowym. Nasze doświadczenie i pasja
+              Niezależnie od tego, czy planujesz <span class="gold-highlight">kameralne spotkanie</span> w gronie
+              najbliższych, czy <span class="gold-highlight">wielką imprezę</span> pełną śmiechu i zabawy — jesteśmy
+              tu, by uczynić ten czas <span class="gold-highlight">wyjątkowym</span>. Nasze <span class="gold-highlight">doświadczenie</span> i <span class="gold-highlight">pasja</span>
               pozwalają nam dopasować się do potrzeb każdego, bo wiemy, że każdy
-              uśmiech i każde dobre wspomnienie są bezcenne.
+              uśmiech i każde dobre wspomnienie są <span class="gold-highlight">bezcenne</span>.
             </p>
           </div>
 
@@ -193,14 +193,14 @@
         <!-- Para -->
         <div class="col-md-6 mb-4 mb-md-0">
           <h2 class="fw-bold mb-3 text-center">
-            Każde wydarzenie traktujemy jak wyjątkową podróż.
+            Każde wydarzenie traktujemy jak <span class="gold-highlight">wyjątkową podróż</span>.
           </h2>
           <p class="lead text-center">
-            My jesteśmy stacją, która łączy emocje, kolory i uśmiechy. Wyobraź
-            sobie nas jako miejsce, gdzie zbierają się wszystkie pozytywne
-            wibracje — miejsce, które nadaje rytm twoim chwilom radości.
+            My jesteśmy <span class="gold-highlight">stacją</span>, która łączy <span class="gold-highlight">emocje</span>, <span class="gold-highlight">kolory</span> i <span class="gold-highlight">uśmiechy</span>. Wyobraź
+            sobie nas jako miejsce, gdzie zbierają się wszystkie <span class="gold-highlight">pozytywne
+            wibracje</span> — miejsce, które nadaje rytm twoim chwilom <span class="gold-highlight">radości</span>.
             Jesteśmy przewodnikiem, który pomaga zorganizować przestrzeń pełną
-            ciepła, kreatywności i pozytywnej energii.
+            <span class="gold-highlight">ciepła</span>, <span class="gold-highlight">kreatywności</span> i <span class="gold-highlight">pozytywnej energii</span>.
           </p>
         </div>
 
@@ -243,12 +243,12 @@
               <div class="icon mb-3"><i class="fas fa-check-circle" style="color: #CFB53B; font-size: 2rem;"></i></div>
               <h3 class="fw-bold mb-3">Profesjonalna obsługa</h3>
               <p class="lead">
-                U nas liczą się emocje, wspomnienia i uśmiech. Organizujemy nie
-                tylko atrakcje, ale wyjątkowe chwile. Fotobudki, maskotki,
-                dekoracje, dmuchańce – wszystko dopasowane do Ciebie.<br /><br />
-                Z nami masz komplet – nie musisz szukać kilku firm. Twoja
-                impreza to nie „kolejny event”, to ważny dzień, który zasługuje
-                na oprawę z sercem. My to rozumiemy.
+                U nas liczą się <span class="gold-highlight">emocje</span>, <span class="gold-highlight">wspomnienia</span> i <span class="gold-highlight">uśmiech</span>. Organizujemy nie
+                tylko atrakcje, ale <span class="gold-highlight"></span>wyjątkowe chwile</span>. <span class="gold-highlight">Fotobudki</span>, <span class="gold-highlight">maskotki</span>,
+                <span class="gold-highlight">dekoracje</span>, <span class="gold-highlight">dmuchańce</span> – wszystko dopasowane do Ciebie.<br /><br />
+                Z nami masz <span class="gold-highlight">komplet</span> – nie musisz szukać kilku firm. Twoja
+                impreza to nie „kolejny event”, to <span class="gold-highlight">ważny dzień</span>, który zasługuje
+                na <span class="gold-highlight">oprawę z sercem</span>. My to rozumiemy.
               </p>
             </div>
           </div>
@@ -257,11 +257,11 @@
               <div class="icon mb-3"><i class="fas fa-truck" style="color: #CFB53B; font-size: 2rem;"></i></div>
               <h3 class="fw-bold mb-3">Dojeżdżamy w Trójmieście</h3>
               <p class="lead">
-                <i class="fas fa-users" style="color: #CFB53B;"></i> Urodziny, chrzciny, komunie, 18-tki, panieńskie, wesela, baby
-                shower, dzień dziecka, festyny, bale, rozpoczęcie i zakończenie
-                roku, mikołajki, eventy firmowe, imprezy przedszkolne i szkolne…
+                <i class="fas fa-users"></i> <span class="gold-highlight">Urodziny</span>, <span class="gold-highlight">chrzciny</span>, <span class="gold-highlight">komunie</span>, <span class="gold-highlight">18-tki</span>, <span class="gold-highlight">panieńskie</span>, <span class="gold-highlight">wesela</span>, <span class="gold-highlight">baby
+                shower</span>, <span class="gold-highlight">dzień dziecka</span>, <span class="gold-highlight">festyny</span>, <span class="gold-highlight">bale</span>, <span class="gold-highlight">rozpoczęcie i zakończenie
+                roku</span>, <span class="gold-highlight">mikołajki</span>, <span class="gold-highlight">eventy firmowe</span>, <span class="gold-highlight">imprezy przedszkolne i szkolne</span>…
                 i wiele, wiele więcej!<br /><br />
-                Nieważne gdzie – ważne, że z nami!
+                Nieważne gdzie – ważne, że <span class="gold-highlight">z nami</span>!
               </p>
             </div>
           </div>
